--- a/en/_posts/2015-09-29-front-in-vale-2015.markdown
+++ b/en/_posts/2015-09-29-front-in-vale-2015.markdown
@@ -4,9 +4,9 @@ title:  "Front in Vale 2015"
 description: "A brief summary of the first front-end event of the Vale do Paraíba."
 type: Post
 date: 2015-09-29
-image: ""
+image: "https://cloud.githubusercontent.com/assets/1345662/10179370/ed971582-66db-11e5-9c8f-31a009342cb1.jpg"
 imageExternal: true
-alt: ""
+alt: "Image of a sunset"
 lang: en
 url_en: /front-in-vale-2015
 url_br: /front-in-vale-2015
