--- a/_posts/2014-10-02-meetup-css-02.markdown
+++ b/_posts/2014-10-02-meetup-css-02.markdown
@@ -4,7 +4,9 @@ title:  "Meetup CSS #02"
 description: "Um resumo do segundo encontro do Meetup CSS!"
 type: Post
 date: 2014-10-02
-image: 'meetup-02-share.jpg'
+image: 'https://cloud.githubusercontent.com/assets/1345662/11458326/bc4cafc0-96a4-11e5-8aba-920ac797d168.jpg'
+imageExternal: true
+alt: 'Meetup CSS SP na sua segunda edição na empresa Lambda 3'
 ---
 
 Essa semana, na terça-feira dia 30, rolou o segundo encontro do <a href="http://www.meetup.com/CSS-SP/">Meetup CSS</a>. Nessa edição tivemos o apoio da <a href="http://www.lambda3.com.br/">Lambda 3</a> que nos cedeu o espaço e também do <a href="http://imasters.com.br/">iMasters</a> que nos ofereceu o <i>coffee</i>.
@@ -21,12 +23,12 @@ Tivemos duas talks:
 * <b>Box-shadow e animações</b> do <a href="https://twitter.com/felquis">Felquis Gimenes</a>.
 
 <figure class="text-center loading">
-    <img src="{{ site.baseurl}}build/img/posts/meetup-02-deivid-marques.jpg" alt="Deivid Marques apresentando na sua talk no Meetup CSS">
+    <img src="https://cloud.githubusercontent.com/assets/1345662/11458325/bc4c16aa-96a4-11e5-82a8-6db3ec216b47.jpg" alt="Deivid Marques apresentando na sua talk no Meetup CSS">
     <figcaption>Deivid Marques falando de SVG animado com CSS</figcaption>
 </figure>
 
 <figure class="text-center loading">
-    <img src="{{ site.baseurl}}build/img/posts/meetup-02-felquis-gimenes.jpg" alt="Felquis Gimenes apresentando na sua talk no Meetup CSS">
+    <img src="https://cloud.githubusercontent.com/assets/1345662/11458323/bc48f614-96a4-11e5-926b-62391bc540a4.jpg" alt="Felquis Gimenes apresentando na sua talk no Meetup CSS">
     <figcaption>Felquis Gimenes: "If you believe, everything is possible"</figcaption>
 </figure>
 
@@ -35,7 +37,7 @@ Tivemos duas talks:
 Temos um <a href="https://github.com/raphaelfabeni/css-sp">repositório no GitHub</a> com a idéia é organizar/centralizar tudo sobre o projeto. Se tiver interesse, <a href="https://github.com/raphaelfabeni/css-sp/blob/master/meetups/02.md">nesse link</a> colocamos algumas informações sobre essa edição (links, vídeo, fotos e talks).
 
 <figure class="text-center loading">
-    <img src="{{ site.baseurl}}build/img/posts/meetup-02-abertura.jpg" alt="Segundo encontro do Meetup CSS">
+    <img src="https://cloud.githubusercontent.com/assets/1345662/11458324/bc47576e-96a4-11e5-8dbd-bf606a988bfa.jpg" alt="Segundo encontro do Meetup CSS">
 </figure>
 
 ## Ajuda a gente?
