[WIP] Revision in draft about BEM CSS

--- a/_drafts/2015-12-02-bem-css.md
+++ b/_drafts/2015-12-02-bem-css.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title:  "BEM CSS"
-description: ""
+description: "Bloco, elemento e modificador. Uma pincelada rápida sobre BEM CSS."
 type: Post
-date: 2015-12-01
-image: ""
+date: 2015-12-02
+image: "https://cloud.githubusercontent.com/assets/1345662/11520648/792ca134-988c-11e5-8d8a-3e5eb70b2bd7.jpg"
 imageExternal: true
-alt: ""
+alt: "Parede branca de uma casa com várias janelas com detalhes na cor cinza, e duas delas na cor laranja"
 lang: pt-br
 url_en: /bem-css
 url_br: /bem-css
@@ -28,41 +28,41 @@ Como pode-se notar a idéia básica é termos três itens:
 
 Ahn?! Imaginemos uma lista de itens, com um item ativo, algo mais ou menos assim:
 
-```html
+{% highlight html %}
 <ul class="list">
   <li class="list-item active"></li>
   <li class="list-item"></li>
   <li class="list-item"></li>
 </ul>
-```
+{% endhighlight %}
 
-```css
+{% highlight css %}
 .list {}
 .list-item {}
 .list-item.active {}
-```
+{% endhighlight %}
 
 Aplicando o *BEM*, teríamos algo assim:
 
-```html
+{% highlight html %}
 <ul class="list">
   <li class="list__item"></li>
   <li class="list__item"></li>
   <li class="list__item list__item--active"></li>
 </ul>
-```
+{% endhighlight %}
 
-```css
+{% highlight css %}
 .list {}
   .list__item {}
   .list__item--active {}
-```
+{% endhighlight %}
 
 Confesso que há algum tempo atrás quando conheci o **BEM** fui influenciado pelo *pré*conceito e achei muito estranho/feio usar esses `__` e `--`. Mas, agora, mais por dentro da idéia, posso admitir que me convenceu. Claro, que como qualquer outro pensamento/metodologia, existem seus pontos negativos e positivos e cabe a ti, dar a palavra final.
 
 Algumas coisas que percebi com a utilização do **BEM** (mas são apenas minhas opiniões):
 
 * Fácil percepção *das coisas*: batendo o olho rapidamente ou na marcação HTML ou no CSS, é possível entender o que cada coisa faz.
-* Mais fácil reutilizar *componentes*.
+* Mais fácil de reutilizar *componentes*.
 
 Gostou? Escrevi alguma groselha? Quer melhorar? Abra uma [issue](https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues) mencionando o post e vamos conversar.
