--- a/en/_drafts/2015-12-02-bem-css.md
+++ b/en/_drafts/2015-12-02-bem-css.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title:  "BEM CSS"
-description: ""
+description: "Block element and modifier. A simple overview about BEM CSS."
 type: Post
-date: 2015-12-01
-image: ""
+date: 2015-12-02
+image: "https://cloud.githubusercontent.com/assets/1345662/11520648/792ca134-988c-11e5-8d8a-3e5eb70b2bd7.jpg"
 imageExternal: true
-alt: ""
+alt: "White wall of a house with several windows with details in gray, and two of them in orange"
 lang: en
 url_en: /bem-css
 url_br: /bem-css
@@ -28,41 +28,41 @@ As can be noted, the basic idea is to have three things:
 
 Huh?! Imagine a list of items with an active item, something more like this:
 
-```html
+{% highlight html %}
 <ul class="list">
   <li class="list-item active"></li>
   <li class="list-item"></li>
   <li class="list-item"></li>
 </ul>
-```
+{% endhighlight %}
 
-```css
+{% highlight css %}
 .list {}
 .list-item {}
 .list-item.active {}
-```
+{% endhighlight %}
 
 Applying the *BEM*, we have something like this:
 
-```html
+{% highlight html %}
 <ul class="list">
   <li class="list__item"></li>
   <li class="list__item"></li>
   <li class="list__item list__item--active"></li>
 </ul>
-```
+{% endhighlight %}
 
-```css
+{% highlight css %}
 .list {}
   .list__item {}
   .list__item--active {}
-```
+{% endhighlight %}
 
-Confesso que há algum tempo atrás quando conheci o **BEM** fui influenciado pelo *pré*conceito e achei muito estranho/feio usar esses `__` e `--`. Mas, agora, mais por dentro da idéia, posso admitir que me convenceu. Claro, que como qualquer outro pensamento/metodologia, existem seus pontos negativos e positivos e cabe a ti, dar a palavra final.
+I need to admit that some time ago when I discovered the **BEM** methodology I thought: *"This is so weird!"*. All those `__` and `--` were so strange . But now, that I know more about the idea, I can say that convinced me. Of course, like any others thoughts/methodologies, there are positive and negative points and it is up to you, give the final word.
 
-Algumas coisas que percebi com a utilização do **BEM** (mas são apenas minhas opiniões):
+Only some topics that I realized using the **BEM** (but are just my opinions):
 
-* Fácil percepção *das coisas*: batendo o olho rapidamente ou na marcação HTML ou no CSS, é possível entender o que cada coisa faz.
-* Mais fácil reutilizar *componentes*.
+* Easy *perception* of things: looking quickly to the HTML markup or CSS, you can understand what each thing does.
+* Easier reuse *components*.
 
-Gostou? Escrevi alguma groselha? Quer melhorar? Abra uma [issue](https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues) mencionando o post e vamos conversar.
+Do you like it? Did I write something stupid? Do you want to improve? Open an [issue](https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues) mentioning the post and let's talk about it.
