--- a/_posts/2016-01-04-es6-let.md
+++ b/_posts/2016-01-04-es6-let.md
@@ -7,7 +7,7 @@ date: 2016-01-04
 image: "https://cloud.githubusercontent.com/assets/1345662/12058818/748fa0b0-af37-11e5-88ee-f6e2b1e33fc5.jpg"
 alt: "Vista de uma rua com carros estacionados em ambos os lados."
 lang: pt-br
-url_en: /es6-let
+url_en: /let-es6
 url_br: /es6-let
 ---
 
