Changes all the highlights to markdown

--- a/_posts/2015-03-10-css-ux.markdown
+++ b/_posts/2015-03-10-css-ux.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "CSS3 em favor da UX"
-description: "CSS3 é coisa linda! Use-o em prol da UX e seja feliz!"
+description: CSS3 é coisa linda! Use-o em prol da UX e seja feliz!
 type: Post
 date: 2015-03-10
 image: 'https://cloud.githubusercontent.com/assets/1345662/11458082/167083aa-96a0-11e5-8256-38d2b385d783.jpg'
