--- a/_posts/2015-12-02-bem-css.md
+++ b/_posts/2015-12-02-bem-css.md
@@ -27,35 +27,35 @@ Como pode-se notar a idéia básica é termos três itens:
 
 Ahn?! Imaginemos uma lista de itens, com um item ativo, algo mais ou menos assim:
 
-{% highlight html %}
+```html
 <ul class="list">
   <li class="list-item active"></li>
   <li class="list-item"></li>
   <li class="list-item"></li>
 </ul>
-{% endhighlight %}
+```
 
-{% highlight css %}
+```css
 .list {}
 .list-item {}
 .list-item.active {}
-{% endhighlight %}
+```
 
 Aplicando o *BEM*, teríamos algo assim:
 
-{% highlight html %}
+```html
 <ul class="list">
   <li class="list__item"></li>
   <li class="list__item"></li>
   <li class="list__item list__item--active"></li>
 </ul>
-{% endhighlight %}
+```
 
-{% highlight css %}
+```css
 .list {}
   .list__item {}
   .list__item--active {}
-{% endhighlight %}
+```
 
 Confesso que há algum tempo atrás quando conheci o **BEM** fui influenciado pelo *pré*conceito e achei muito estranho/feio usar esses `__` e `--`. Mas, agora, mais por dentro da idéia, posso admitir que me convenceu. Claro, que como qualquer outro pensamento/metodologia, existem seus pontos negativos e positivos e cabe a ti, dar a palavra final.
 
